--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ em strong {
 }
 
 .itens {
-	font-style: italic; font-size: 36px
+	font-style: italic; font-size: 28px; color: blue;
 }
 
 .beneficios {
