--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 .titulo-centralizado {
-	text-align: center; font-size: 36px; color: red;
+	text-align: center; font-size: 36px; color: chocolate;
 }
 
 p {
